--- a/assignment1.ipynb
+++ b/assignment1.ipynb
@@ -483,6 +483,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "3c112526",
+   "metadata": {},
+   "source": [
+    "## Processed Table (first 25 rows)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 11,
    "id": "2b42f742",
