--- a/assignment1.ipynb
+++ b/assignment1.ipynb
@@ -86,7 +86,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_183520/1902102978.py:4: FutureWarning: Passing literal html to 'read_html' is deprecated and will be removed in a future version. To read from a literal string, wrap it in a 'StringIO' object.\n",
+      "C:\\Users\\User\\AppData\\Local\\Temp\\ipykernel_12480\\1902102978.py:4: FutureWarning: Passing literal html to 'read_html' is deprecated and will be removed in a future version. To read from a literal string, wrap it in a 'StringIO' object.\n",
       "  tables = pd.read_html(html_text)\n"
      ]
     }
@@ -110,7 +110,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_183520/1319474227.py:11: DeprecationWarning: is_categorical_dtype is deprecated and will be removed in a future version. Use isinstance(dtype, pd.CategoricalDtype) instead\n",
+      "C:\\Users\\User\\AppData\\Local\\Temp\\ipykernel_12480\\1319474227.py:11: DeprecationWarning: is_categorical_dtype is deprecated and will be removed in a future version. Use isinstance(dtype, pd.CategoricalDtype) instead\n",
       "  if pd.api.types.is_categorical_dtype(table[col]):\n"
      ]
     }
@@ -976,6 +976,14 @@
   },
   {
    "cell_type": "markdown",
+   "id": "02f2559c",
+   "metadata": {},
+   "source": [
+    "freiofr\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "291564cd",
    "metadata": {},
    "source": [
@@ -985,7 +993,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -999,7 +1007,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.3"
+   "version": "3.12.10"
   }
  },
  "nbformat": 4,
