--- a/assignment1.ipynb
+++ b/assignment1.ipynb
@@ -967,6 +967,58 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "de8ef1fa",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CubeSat launches per year (count):\n",
+      "Launch date\n",
+      "2003.0     7\n",
+      "2005.0     3\n",
+      "2006.0    15\n",
+      "2007.0     7\n",
+      "2008.0     8\n",
+      "2009.0     9\n",
+      "2010.0    16\n",
+      "2011.0    10\n",
+      "2012.0    14\n",
+      "2013.0    25\n",
+      "2014.0    22\n",
+      "2015.0    16\n",
+      "2016.0     2\n",
+      "2017.0    18\n",
+      "2018.0    24\n",
+      "2019.0     7\n",
+      "2020.0     5\n",
+      "2021.0    15\n",
+      "2022.0    23\n",
+      "2023.0     2\n",
+      "2024.0     1\n",
+      "Name: count, dtype: int64\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Count CubeSat launches per year and print the results\n",
+    "launches_per_year = summary_df['Launch date'].dt.year.value_counts().sort_index()\n",
+    "print(\"CubeSat launches per year (count):\")\n",
+    "print(launches_per_year)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e0b9c959",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
    "id": "aa2fb196",
    "metadata": {},
@@ -981,6 +1033,14 @@
    "source": [
     "freiofr\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "739738e1",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
