did some data cleaning

--- a/assignment1.ipynb
+++ b/assignment1.ipynb
@@ -86,7 +86,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\User\\AppData\\Local\\Temp\\ipykernel_12480\\1902102978.py:4: FutureWarning: Passing literal html to 'read_html' is deprecated and will be removed in a future version. To read from a literal string, wrap it in a 'StringIO' object.\n",
+      "C:\\Users\\User\\AppData\\Local\\Temp\\ipykernel_25732\\1902102978.py:4: FutureWarning: Passing literal html to 'read_html' is deprecated and will be removed in a future version. To read from a literal string, wrap it in a 'StringIO' object.\n",
       "  tables = pd.read_html(html_text)\n"
      ]
     }
@@ -110,7 +110,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\User\\AppData\\Local\\Temp\\ipykernel_12480\\1319474227.py:11: DeprecationWarning: is_categorical_dtype is deprecated and will be removed in a future version. Use isinstance(dtype, pd.CategoricalDtype) instead\n",
+      "C:\\Users\\User\\AppData\\Local\\Temp\\ipykernel_25732\\1319474227.py:11: DeprecationWarning: is_categorical_dtype is deprecated and will be removed in a future version. Use isinstance(dtype, pd.CategoricalDtype) instead\n",
       "  if pd.api.types.is_categorical_dtype(table[col]):\n"
      ]
     }
@@ -318,7 +318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 16,
    "id": "aeed1b2f",
    "metadata": {},
    "outputs": [
@@ -327,14 +327,14 @@
      "output_type": "stream",
      "text": [
       "mission_category\n",
-      "Technology           89\n",
-      "Unknown              42\n",
-      "Other                29\n",
-      "Science              28\n",
-      "Earth Observation    26\n",
-      "Communication        20\n",
-      "Education             9\n",
-      "Space Weather         7\n",
+      "Technology                 89\n",
+      "Unknown                    42\n",
+      "Science                    32\n",
+      "Earth Observation          28\n",
+      "Communication              20\n",
+      "Education                  15\n",
+      "Other                      13\n",
+      "Earth and Space Weather    11\n",
       "Name: count, dtype: int64\n"
      ]
     }
@@ -347,12 +347,12 @@
     "    s = str(m).lower()\n",
     "    # keyword-driven coarse categories (order matters: more specific first)\n",
     "    mapping = [\n",
-    "        ('Earth Observation', ['earth', 'mapping', 'imaging', 'remote sensing', 'imagery', 'land', 'ocean', 'terrain', 'observation', 'camera']),\n",
-    "        ('Space Weather', ['space weather', 'space-weather', 'spaceweather', 'space weather']),\n",
+    "        ('Earth Observation', ['tracking', 'earth', 'mapping', 'imaging', 'remote sensing', 'imagery', 'land', 'ocean', 'terrain', 'observation', 'camera']),\n",
+    "        ('Earth and Space Weather', ['gamma ray', 'monitoring', 'climatology','space weather', 'space-weather', 'spaceweather', 'space weather']),\n",
     "        ('Communication', ['communic', 'comms', 'amateur', 'ham', 'relay', 'telemetry']),\n",
-    "        ('Education', ['student', 'university', 'educat', 'student-built', 'education', 'outreach']),\n",
-    "        ('Science', ['science', 'scientif', 'research', 'experiment', 'measure']),\n",
-    "        ('Technology', ['technology', 'tech', 'demonstrat', 'prototype', 'test', 'technology demonstration', 'tech demo']),\n",
+    "        ('Education', ['public', 'student', 'university', 'educat', 'student-built', 'education', 'outreach', 'art']),\n",
+    "        ('Science', ['studies', 'science', 'scientif', 'research', 'experiment', 'measure']),\n",
+    "        ('Technology', ['concept', 'developing', 'technology', 'tech', 'demonstrat', 'prototype', 'test', 'technology demonstration', 'tech demo']),\n",
     "    ]\n",
     "    for cat, keywords in mapping:\n",
     "        if any(kw in s for kw in keywords):\n",
@@ -375,7 +375,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 17,
+   "id": "0ac2a700",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "30                            Study of radiation effects\n",
+      "49                    Solar sail propulsion while in LEO\n",
+      "50                    Solar sail propulsion while in LEO\n",
+      "73                                               Weather\n",
+      "115                                                flyby\n",
+      "119                                            Firefight\n",
+      "133    Resilience of Resistive Memory in Space Condit...\n",
+      "193    Radiation effects on bipolar-transistor-based ...\n",
+      "205    Shock and vibration experienced by payloads wh...\n",
+      "206                      Short-distance tether extension\n",
+      "212                   Shared platform for max 8 payloads\n",
+      "233    Deployable powered boom for gravity gradient l...\n",
+      "234    Deployed TigriSat, Lemur 1, ANTELSAT and AeroC...\n",
+      "Name: Mission, dtype: object\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Filter rows where 'Mission Category' is 'Other' and print the 'Mission' column\n",
+    "other_missions = table[table['mission_category'] == 'Other']['Mission']\n",
+    "print(other_missions)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
    "id": "92d5eb04",
    "metadata": {},
    "outputs": [
@@ -410,7 +443,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "3f1b4916",
    "metadata": {},
    "outputs": [
@@ -431,7 +464,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "id": "3ba5b01e",
    "metadata": {},
    "outputs": [
@@ -492,7 +525,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "id": "2b42f742",
    "metadata": {},
    "outputs": [
@@ -574,7 +607,7 @@
        "      <td>1U</td>\n",
        "      <td>2008-04-28</td>\n",
        "      <td>Success</td>\n",
-       "      <td>Other</td>\n",
+       "      <td>Earth and Space Weather</td>\n",
        "      <td>Unknown</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -654,7 +687,7 @@
        "      <td>1U</td>\n",
        "      <td>2014-06-19</td>\n",
        "      <td>Unknown</td>\n",
-       "      <td>Other</td>\n",
+       "      <td>Science</td>\n",
        "      <td>No</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -684,7 +717,7 @@
        "      <td>1U</td>\n",
        "      <td>2013-08-03</td>\n",
        "      <td>Success</td>\n",
-       "      <td>Other</td>\n",
+       "      <td>Education</td>\n",
        "      <td>Yes</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -694,7 +727,7 @@
        "      <td>2U</td>\n",
        "      <td>2014-01-09</td>\n",
        "      <td>Success</td>\n",
-       "      <td>Other</td>\n",
+       "      <td>Education</td>\n",
        "      <td>Yes</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -704,7 +737,7 @@
        "      <td>1U</td>\n",
        "      <td>2013-08-03</td>\n",
        "      <td>Success</td>\n",
-       "      <td>Other</td>\n",
+       "      <td>Education</td>\n",
        "      <td>Yes</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -809,35 +842,35 @@
        "23  AuroraSat-1            2022–047  1.5U  2022-02-05          Unknown   \n",
        "24     BCCSAT-1  2021-022AK (48041)    1U         NaT  Mission Failure   \n",
        "\n",
-       "     Mission Category Deployed from ISS  \n",
-       "0   Earth Observation               Yes  \n",
-       "1          Technology                No  \n",
-       "2             Science                No  \n",
-       "3          Technology                No  \n",
-       "4               Other           Unknown  \n",
-       "5               Other                No  \n",
-       "6          Technology                No  \n",
-       "7             Unknown                No  \n",
-       "8             Unknown                No  \n",
-       "9          Technology           Unknown  \n",
-       "10         Technology                No  \n",
-       "11         Technology           Unknown  \n",
-       "12              Other                No  \n",
-       "13            Science               Yes  \n",
-       "14         Technology                No  \n",
-       "15              Other               Yes  \n",
-       "16              Other               Yes  \n",
-       "17              Other               Yes  \n",
-       "18         Technology           Unknown  \n",
-       "19         Technology                No  \n",
-       "20         Technology                No  \n",
-       "21         Technology           Unknown  \n",
-       "22         Technology                No  \n",
-       "23         Technology                No  \n",
-       "24          Education                No  "
+       "           Mission Category Deployed from ISS  \n",
+       "0         Earth Observation               Yes  \n",
+       "1                Technology                No  \n",
+       "2                   Science                No  \n",
+       "3                Technology                No  \n",
+       "4   Earth and Space Weather           Unknown  \n",
+       "5                     Other                No  \n",
+       "6                Technology                No  \n",
+       "7                   Unknown                No  \n",
+       "8                   Unknown                No  \n",
+       "9                Technology           Unknown  \n",
+       "10               Technology                No  \n",
+       "11               Technology           Unknown  \n",
+       "12                  Science                No  \n",
+       "13                  Science               Yes  \n",
+       "14               Technology                No  \n",
+       "15                Education               Yes  \n",
+       "16                Education               Yes  \n",
+       "17                Education               Yes  \n",
+       "18               Technology           Unknown  \n",
+       "19               Technology                No  \n",
+       "20               Technology                No  \n",
+       "21               Technology           Unknown  \n",
+       "22               Technology                No  \n",
+       "23               Technology                No  \n",
+       "24                Education                No  "
       ]
      },
-     "execution_count": 11,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -856,7 +889,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "id": "fcc78f82",
    "metadata": {},
    "outputs": [
@@ -948,7 +981,7 @@
        "Other      2      0.8"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -968,7 +1001,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "id": "de8ef1fa",
    "metadata": {},
    "outputs": [
@@ -1012,11 +1045,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "e0b9c959",
+   "execution_count": 15,
+   "id": "794932dc",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Mission Outcome  Launch Failure  Mission Failure  Success  Unknown\n",
+      "Launch date                                                       \n",
+      "2003.0                        0                4        3        0\n",
+      "2005.0                        0                1        2        0\n",
+      "2006.0                       14                0        1        0\n",
+      "2007.0                        0                2        5        0\n",
+      "2008.0                        2                0        6        0\n",
+      "2009.0                        0                0        9        0\n",
+      "2010.0                        0                4       10        2\n",
+      "2011.0                        3                0        6        1\n",
+      "2012.0                        0                3        7        4\n",
+      "2013.0                        0                1       17        7\n",
+      "2014.0                        0                2       11        9\n",
+      "2015.0                        0                2       11        3\n",
+      "2016.0                        0                0        1        1\n",
+      "2017.0                        0                1       14        3\n",
+      "2018.0                        0                0       15        9\n",
+      "2019.0                        0                0        7        0\n",
+      "2020.0                        0                0        1        4\n",
+      "2021.0                        0                0       15        0\n",
+      "2022.0                        0                0        0       23\n",
+      "2023.0                        0                0        1        1\n",
+      "2024.0                        1                0        0        0\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\User\\AppData\\Local\\Temp\\ipykernel_25732\\3747460508.py:2: FutureWarning: The default of observed=False is deprecated and will be changed to True in a future version of pandas. Pass observed=False to retain current behavior or observed=True to adopt the future default and silence this warning.\n",
+      "  failures_successes = summary_df.groupby([summary_df['Launch date'].dt.year, 'Mission Outcome']).size().unstack(fill_value=0)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Group by year and final outcome to count occurrences\n",
+    "failures_successes = summary_df.groupby([summary_df['Launch date'].dt.year, 'Mission Outcome']).size().unstack(fill_value=0)\n",
+    "\n",
+    "# Print the results\n",
+    "print(failures_successes)"
+   ]
   },
   {
    "cell_type": "markdown",
