did some data alanalysis

--- a/assignment1.ipynb
+++ b/assignment1.ipynb
@@ -86,7 +86,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\User\\AppData\\Local\\Temp\\ipykernel_25732\\1902102978.py:4: FutureWarning: Passing literal html to 'read_html' is deprecated and will be removed in a future version. To read from a literal string, wrap it in a 'StringIO' object.\n",
+      "C:\\Users\\User\\AppData\\Local\\Temp\\ipykernel_21460\\1902102978.py:4: FutureWarning: Passing literal html to 'read_html' is deprecated and will be removed in a future version. To read from a literal string, wrap it in a 'StringIO' object.\n",
       "  tables = pd.read_html(html_text)\n"
      ]
     }
@@ -110,7 +110,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\User\\AppData\\Local\\Temp\\ipykernel_25732\\1319474227.py:11: DeprecationWarning: is_categorical_dtype is deprecated and will be removed in a future version. Use isinstance(dtype, pd.CategoricalDtype) instead\n",
+      "C:\\Users\\User\\AppData\\Local\\Temp\\ipykernel_21460\\1319474227.py:11: DeprecationWarning: is_categorical_dtype is deprecated and will be removed in a future version. Use isinstance(dtype, pd.CategoricalDtype) instead\n",
       "  if pd.api.types.is_categorical_dtype(table[col]):\n"
      ]
     }
@@ -318,7 +318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 7,
    "id": "aeed1b2f",
    "metadata": {},
    "outputs": [
@@ -375,7 +375,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 8,
    "id": "0ac2a700",
    "metadata": {},
    "outputs": [
@@ -617,7 +617,7 @@
        "      <td>1U</td>\n",
        "      <td>2013-02-25</td>\n",
        "      <td>Success</td>\n",
-       "      <td>Other</td>\n",
+       "      <td>Earth Observation</td>\n",
        "      <td>No</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -848,7 +848,7 @@
        "2                   Science                No  \n",
        "3                Technology                No  \n",
        "4   Earth and Space Weather           Unknown  \n",
-       "5                     Other                No  \n",
+       "5         Earth Observation                No  \n",
        "6                Technology                No  \n",
        "7                   Unknown                No  \n",
        "8                   Unknown                No  \n",
@@ -1031,8 +1031,7 @@
       "2021.0    15\n",
       "2022.0    23\n",
       "2023.0     2\n",
-      "2024.0     1\n",
-      "Name: count, dtype: int64\n"
+      "2024.0     1\n"
      ]
     }
    ],
@@ -1040,7 +1039,7 @@
     "# Count CubeSat launches per year and print the results\n",
     "launches_per_year = summary_df['Launch date'].dt.year.value_counts().sort_index()\n",
     "print(\"CubeSat launches per year (count):\")\n",
-    "print(launches_per_year)"
+    "print(launches_per_year.to_string())"
    ]
   },
   {
@@ -1082,7 +1081,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\User\\AppData\\Local\\Temp\\ipykernel_25732\\3747460508.py:2: FutureWarning: The default of observed=False is deprecated and will be changed to True in a future version of pandas. Pass observed=False to retain current behavior or observed=True to adopt the future default and silence this warning.\n",
+      "C:\\Users\\User\\AppData\\Local\\Temp\\ipykernel_21460\\3747460508.py:2: FutureWarning: The default of observed=False is deprecated and will be changed to True in a future version of pandas. Pass observed=False to retain current behavior or observed=True to adopt the future default and silence this warning.\n",
       "  failures_successes = summary_df.groupby([summary_df['Launch date'].dt.year, 'Mission Outcome']).size().unstack(fill_value=0)\n"
      ]
     }
@@ -1093,6 +1092,63 @@
     "\n",
     "# Print the results\n",
     "print(failures_successes)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "995d76f5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Distribution (%) of CubeSats by mission category:\n",
+      "Mission Category\n",
+      "Technology                 35.6\n",
+      "Unknown                    16.8\n",
+      "Science                    12.8\n",
+      "Earth Observation          11.2\n",
+      "Communication               8.0\n",
+      "Education                   6.0\n",
+      "Other                       5.2\n",
+      "Earth and Space Weather     4.4\n"
+     ]
+    }
+   ],
+   "source": [
+    "counts = summary_df['Mission Category'].value_counts(dropna=False)\n",
+    "percent = (counts / counts.sum() * 100).round(2)\n",
+    "print(\"Distribution (%) of CubeSats by mission category:\")\n",
+    "print(percent.to_string())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "1df0719d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Distribution (%) of deployment types:\n",
+      "Deployed from ISS\n",
+      "No         58.8\n",
+      "Unknown    30.4\n",
+      "Yes        10.8\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Distribution (percentage) of deployment types\n",
+    "deployment_counts = summary_df['Deployed from ISS'].value_counts(dropna=False)\n",
+    "deployment_percent = (deployment_counts / deployment_counts.sum() * 100).round(2)\n",
+    "\n",
+    "print(\"Distribution (%) of deployment types:\")\n",
+    "print(deployment_percent.to_string())"
    ]
   },
   {
